# 7senseTask

./: CMakeLists.txt  Doxyfile  README.md  app.py  main.cpp  requirements.txt  shell.nix  tests.py
